--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "src/backend/server.js",
   "scripts": {
     "start": "node src/backend/server.js",
-    "dev": "nodemon src/backend/server.js",
-    "build": "next build"
+    "dev": "concurrently \"npm run start:frontend\" \"nodemon src/backend/server.js\"",
+    "build": "next build",
+    "start:frontend": "next dev"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -20,7 +21,8 @@
     "react-dom": "^17.0.2",
     "next": "^10.1.3",
     "tailwindcss": "^2.1.1",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "concurrently": "^6.0.0"
   },
   "keywords": [],
   "author": "",
